testcases/negative/invalid_quoted_printable.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
NOTE;ENCODING=QUOTED-PRINTABLE:Invalid=ZZ
END:VCARD
